# fips-hasher

./: Cargo.toml  README.md
src/: audit.rs  benchmark.rs  exclude.rs  hash.rs  main.rs  report.rs  serve.rs  verify.rs
test-data/sub/: file3.txt
