[package]
name = "fips-hasher"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
axum = "0.7"
tracing = "0.1"
anyhow = "1.0"